--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Yandex.Metrika counter -->
+   <script type="text/javascript" >
+	      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+					    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+	      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+	      ym(86784357, "init", {
+						 clickmap:true,
+						 trackLinks:true,
+						 accurateTrackBounce:true,
+						 webvisor:true
+					    });
+   </script>
+	   <!-- /Yandex.Metrika counter -->
     <title>React App</title>
   </head>
   <body>
@@ -39,5 +53,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+	   <noscript><div><img src="https://mc.yandex.ru/watch/86784357" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   </body>
 </html>
