--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <% if (process.env.NODE_ENV !== undefined && process.env.NODE_ENV !== "development") { %> 
-      <!-- Yandex.Metrika counter -->
-      <script type="text/javascript" >
-        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-          m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-          (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-          ym(86784357, "init", {
-            clickmap:true,
-            trackLinks:true,
-            accurateTrackBounce:true,
-            webvisor:true
-          });
-      </script>
-      <!-- /Yandex.Metrika counter -->
-    <% } %>
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <noscript><div><img src="https://mc.yandex.ru/watch/86784357" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta
+            name="description"
+            content="Платформа для размещения образовательных игр."
+        />
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <% if (process.env.NODE_ENV !== undefined && process.env.NODE_ENV !== "development") { %> 
+            <!-- Yandex.Metrika counter -->
+              <script type="text/javascript" >
+                  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+                      m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+                      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    
+                      ym(86784357, "init", {
+                          clickmap:true,
+                          trackLinks:true,
+                          accurateTrackBounce:true,
+                          webvisor:true
+                      });
+              </script>
+            <!-- /Yandex.Metrika counter -->
+        <% } %>
+        <title>UrFU Games</title>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
+        <!-- <noscript><div><img src="https://mc.yandex.ru/watch/86784357" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
+    </body>
 </html>
