--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -31,7 +31,7 @@
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <script>
-            window.alert = function (msg) { console.error(msg); }; // FIXME
+            window.alert = function (msg) {}; // FIXME
         </script>
         <div id="root"></div>
         <!-- <noscript><div><img src="https://mc.yandex.ru/watch/86784357" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
